# BigIntegerOptimized

./: CMakeLists.txt  NumberHolder.cpp  NumberHolder.h  alltest2.cpp  big_integer.cpp  big_integer.h  main.cpp
tests/: all_tests.cpp
